# learning_ros_kinetic

Part_1/example_action_server/action/: demo.action
Part_1/example_action_server/src/: #example_action_client.cpp#  example_action_server.cpp  example_action_server_w_fdbk.cpp
Part_1/example_ros_msg/: package.xml
Part_1/example_ros_msg/src/: example_ros_message_publisher.cpp  vector_publisher.cpp  vector_subscriber.cpp
Part_1/example_ros_service/src/: example_ros_client.cpp  example_ros_service.cpp
Part_1/minimal_nodes/: #CMakeLists.txt#  CMakeLists.txt
Part_1/minimal_nodes/launch/: #minimal_nodes.launch#
Part_1/minimal_nodes/src/: 2018-10-17-11-37-37.bag  minimal_controller.cpp  minimal_publisher.cpp  minimal_simulator.cpp  minimal_subscriber.cpp  sleepy_minimal_publisher.cpp
Part_1/my_minimal_nodes2/: CMakeLists.txt  package.xml
Part_2/example_eigen/src/: #example_eigen_plane_fit.cpp#  example_eigen_plane_fit.cpp
Part_2/example_gazebo_set_state/src/: example_gazebo_set_state.cpp
Part_2/example_tf_listener/: CMakeLists.txt
Part_2/example_tf_listener/src/: example_tf_listener.cpp  example_tf_listener.h  example_tf_listener_fncs.cpp
Part_2/minimal_joint_controller/src/: minimal_joint_controller.cpp
Part_2/minimal_robot_description/: minimal_robot_description_w_jnt_ctl.urdf  minimal_robot_description_w_jnt_pos_ctl.xacro  minimal_robot_w_jnt_ctl.launch
Part_2/mobot_urdf/urdf/: frames.gv
Part_2/xform_utils/: CMakeLists.txt
Part_3/pcl_utils/: CMakeLists.txt
Part_4/mobot_drifty_odom/: CMakeLists.txt
Part_4/odom_tf/: CMakeLists.txt
(+8 files in other folders)
