<?xml version="1.0"?>
<package>
  <name>example_ros_msg</name>
  <version>0.0.0</version>
  <description>The example_ros_msg package</description>
  
  <maintainer email="wyatt@todo.todo">wyatt</maintainer>
  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>

  <run_depend>message_runtime</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>custom_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
    
